Applied nbQA to all notebooks.

--- a/docs/anime.ipynb
+++ b/docs/anime.ipynb
@@ -44,9 +44,14 @@
    "outputs": [],
    "source": [
     "# Import pyjanitor and pandas\n",
+    "# Supress user warnings when we try overwriting our custom pandas flavor functions\n",
+    "import warnings\n",
+    "\n",
     "import janitor\n",
     "import pandas as pd\n",
-    "import pandas_flavor as pf"
+    "import pandas_flavor as pf\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -54,11 +59,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Supress user warnings when we try overwriting our custom pandas flavor functions\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -73,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-04-23/raw_anime.csv'\n",
+    "filename = \"https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-04-23/raw_anime.csv\"\n",
     "df = pd.read_csv(filename)\n",
     "\n",
     "\n",
@@ -124,7 +125,7 @@
     "    stop: int = None,\n",
     "    pat: str = \" \",\n",
     "    *args,\n",
-    "    **kwargs\n",
+    "    **kwargs,\n",
     "):\n",
     "    \"\"\"\n",
     "    Wrapper around `df.str.split` with additional `start` and `end` arguments\n",
@@ -213,7 +214,8 @@
     ">\n",
     ">Heads up the dataset is about 97 mb - if you want to free up some space, drop the synopsis and background, they are long strings, or broadcast, premiered, related as they are redundant or less useful.\n",
     ">\n",
-    ">|variable       |class     |description |\n",
+    "\n",
+    "|variable       |class     |description |\n",
     "|:--------------|:---------|:-----------|\n",
     "|animeID        |double    | Anime ID (as in https://myanimelist.net/anime/animeID)          |\n",
     "|name           |character |anime title - extracted from the site.           |\n",
@@ -258,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-04-23/raw_anime.csv'\n",
+    "filename = \"https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-04-23/raw_anime.csv\"\n",
     "df = pd.read_csv(filename)"
    ]
   },
@@ -310,7 +312,7 @@
    "outputs": [],
    "source": [
     "# Let's see what we trying to remove\n",
-    "df.loc[df['producers'].str.contains(\"\\[\", na=False), 'producers'].head()"
+    "df.loc[df[\"producers\"].str.contains(\"\\[\", na=False), \"producers\"].head()"
    ]
   },
   {
@@ -351,10 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_df = (\n",
-    "    df\n",
-    "    .str_remove(column_name='producers', pat='\\[|\\]')\n",
-    ")"
+    "clean_df = df.str_remove(column_name=\"producers\", pat=\"\\[|\\]\")"
    ]
   },
   {
@@ -370,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_df['producers'].head()"
+    "clean_df[\"producers\"].head()"
    ]
   },
   {
@@ -423,10 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_df = (\n",
-    "    clean_df\n",
-    "    .explode(column_name='producers', sep=',')\n",
-    ")"
+    "clean_df = clean_df.explode(column_name=\"producers\", sep=\",\")"
    ]
   },
   {
@@ -442,7 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_df['producers'].head()"
+    "clean_df[\"producers\"].head()"
    ]
   },
   {
@@ -463,10 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_df = (\n",
-    "    clean_df\n",
-    "    .str_remove(column_name='producers', pat='\\'')\n",
-    ")"
+    "clean_df = clean_df.str_remove(column_name=\"producers\", pat=\"'\")"
    ]
   },
   {
@@ -495,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_df = clean_df.str_trim('producers')"
+    "clean_df = clean_df.str_trim(\"producers\")"
    ]
   },
   {
@@ -511,7 +504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_df['producers'].head()"
+    "clean_df[\"producers\"].head()"
    ]
   },
   {
@@ -554,15 +547,15 @@
     "clean_df = (\n",
     "    clean_df\n",
     "    # Perform operation for genre.\n",
-    "    .str_remove(column_name='genre', pat='\\[|\\]')\n",
-    "    .explode(column_name='genre', sep=',')\n",
-    "    .str_remove(column_name='genre', pat='\\'')\n",
-    "    .str_trim(column_name='genre')\n",
+    "    .str_remove(column_name=\"genre\", pat=\"\\[|\\]\")\n",
+    "    .explode(column_name=\"genre\", sep=\",\")\n",
+    "    .str_remove(column_name=\"genre\", pat=\"'\")\n",
+    "    .str_trim(column_name=\"genre\")\n",
     "    # Now do it for studio\n",
-    "    .str_remove(column_name='studio', pat='\\[|\\]')\n",
-    "    .explode(column_name='studio', sep=',')\n",
-    "    .str_remove(column_name='studio', pat='\\'')\n",
-    "    .str_trim(column_name='studio')\n",
+    "    .str_remove(column_name=\"studio\", pat=\"\\[|\\]\")\n",
+    "    .explode(column_name=\"studio\", sep=\",\")\n",
+    "    .str_remove(column_name=\"studio\", pat=\"'\")\n",
+    "    .str_trim(column_name=\"studio\")\n",
     ")"
    ]
   },
@@ -579,7 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_df[['genre', 'studio']].head()"
+    "clean_df[[\"genre\", \"studio\"]].head()"
    ]
   },
   {
@@ -595,20 +588,20 @@
    "source": [
     "The `aired` column has something a little different. In addition to the usual removing some strings and whitespace trimming, we want to separate the values into two separate columns `start_date` and `end_date`\n",
     "\n",
-    ">```r\n",
-    ">  # Aired\n",
-    "  mutate(aired = str_remove(aired, \"\\\\{\"),\n",
-    "         aired = str_remove(aired, \"\\\\}\"),\n",
-    "         aired = str_remove(aired, \"'from': \"),\n",
-    "         aired = str_remove(aired, \"'to': \"),\n",
-    "         aired = word(aired, start = 1, 2, sep = \",\")) %>% \n",
-    "  separate(aired, into = c(\"start_date\", \"end_date\"), sep = \",\") %>% \n",
-    "  mutate(start_date = str_remove_all(start_date, \"'\"),\n",
-    "         start_date = str_sub(start_date, 1, 10),\n",
-    "         end_date = str_remove_all(start_date, \"'\"),\n",
-    "         end_date = str_sub(end_date, 1, 10)) %>%\n",
-    "  mutate(start_date = lubridate::ymd(start_date),\n",
-    "         end_date = lubridate::ymd(end_date)) %>%\n",
+    "```r\n",
+    "# Aired\n",
+    "mutate(aired = str_remove(aired, \"\\\\{\"),\n",
+    "       aired = str_remove(aired, \"\\\\}\"),\n",
+    "       aired = str_remove(aired, \"'from': \"),\n",
+    "       aired = str_remove(aired, \"'to': \"),\n",
+    "       aired = word(aired, start = 1, 2, sep = \",\")) %>% \n",
+    "separate(aired, into = c(\"start_date\", \"end_date\"), sep = \",\") %>% \n",
+    "mutate(start_date = str_remove_all(start_date, \"'\"),\n",
+    "       start_date = str_sub(start_date, 1, 10),\n",
+    "       end_date = str_remove_all(start_date, \"'\"),\n",
+    "       end_date = str_sub(end_date, 1, 10)) %>%\n",
+    "mutate(start_date = lubridate::ymd(start_date),\n",
+    "       end_date = lubridate::ymd(end_date)) %>%\n",
     "```"
    ]
   },
@@ -626,7 +619,7 @@
    "outputs": [],
    "source": [
     "# Currently looks like this\n",
-    "clean_df['aired'].head()"
+    "clean_df[\"aired\"].head()"
    ]
   },
   {
@@ -643,7 +636,7 @@
     "    stop: int = None,\n",
     "    pat: str = \" \",\n",
     "    *args,\n",
-    "    **kwargs\n",
+    "    **kwargs,\n",
     "):\n",
     "    \"\"\"\n",
     "    Wrapper around `df.str.split` with additional `start` and `end` arguments\n",
@@ -722,7 +715,7 @@
    "outputs": [],
    "source": [
     "# Resulting 'start_date' and 'end_date' columns with 'aired' column removed\n",
-    "clean_df[['start_date', 'end_date']].head()"
+    "clean_df[[\"start_date\", \"end_date\"]].head()"
    ]
   },
   {
