--- a/docs/bird_call.ipynb
+++ b/docs/bird_call.ipynb
@@ -38,8 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import janitor"
+    "import janitor\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -61,8 +61,8 @@
     "    \"https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-04-30/raw/Chicago_collision_data.csv\"\n",
     ")\n",
     "raw_call = pd.read_csv(\n",
-    "    \"https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-04-30/raw/bird_call.csv\", \n",
-    "    sep=\" \"\n",
+    "    \"https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-04-30/raw/bird_call.csv\",\n",
+    "    sep=\" \",\n",
     ")\n",
     "raw_light = pd.read_csv(\n",
     "    \"https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-04-30/raw/Light_levels_dryad.csv\"\n",
@@ -150,11 +150,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_call = (\n",
-    "    raw_call\n",
-    "    .rename_column(\"Species\", \"Genus\")  # rename 'Species' column to 'Genus'\n",
-    "    .rename_column(\"Family\", \"Species\")  # rename 'Family' columnto 'Species'\n",
-    ")"
+    "clean_call = raw_call.rename_column(\n",
+    "    \"Species\", \"Genus\"\n",
+    ").rename_column(  # rename 'Species' column to 'Genus'\n",
+    "    \"Family\", \"Species\"\n",
+    ")  # rename 'Family' columnto 'Species'"
    ]
   },
   {
@@ -180,8 +180,9 @@
    "outputs": [],
    "source": [
     "clean_birds = (\n",
-    "    raw_birds\n",
-    "    .merge(clean_call, how='left')  # merge the raw_birds dataframe with clean_raw dataframe\n",
+    "    raw_birds.merge(\n",
+    "        clean_call, how=\"left\"\n",
+    "    )  # merge the raw_birds dataframe with clean_raw dataframe\n",
     "    .select_columns(\n",
     "        [\n",
     "            \"Genus\",\n",
@@ -191,11 +192,13 @@
     "            \"Collisions\",\n",
     "            \"Call\",\n",
     "            \"Habitat\",\n",
-    "            \"Stratum\"\n",
+    "            \"Stratum\",\n",
     "        ]\n",
     "    )  # include list of cols\n",
     "    .clean_names()\n",
-    "    .rename_column(\"collisions\", \"family\")  # rename 'collisions' column to 'family' in merged dataframe\n",
+    "    .rename_column(\n",
+    "        \"collisions\", \"family\"\n",
+    "    )  # rename 'collisions' column to 'family' in merged dataframe\n",
     "    .rename_column(\"call\", \"flight_call\")\n",
     "    .dropna()  # drop all rows which contain a NaN\n",
     ")"
