--- a/docs/board_games.ipynb
+++ b/docs/board_games.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import janitor\n",
+    "import pandas as pd\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -30,9 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import janitor\n",
-    "import os"
+    "%matplotlib inline"
    ]
   },
   {
@@ -51,11 +60,13 @@
    "source": [
     "cleaned_df = (\n",
     "    pd.read_csv(\n",
-    "        \"https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-03-12//board_games.csv\"\n",
+    "        \"https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-03-12//board_games.csv\"  # noqa: E501\n",
     "    )  # ingest raw data\n",
     "    .clean_names()  # removes whitespace, punctuation/symbols, capitalization\n",
     "    .remove_empty()  # removes entirely empty rows / columns\n",
-    "    .drop(columns=[\"image\", \"thumbnail\", \"compilation\", \"game_id\"])  # drops unnecessary columns\n",
+    "    .drop(\n",
+    "        columns=[\"image\", \"thumbnail\", \"compilation\", \"game_id\"]\n",
+    "    )  # drops unnecessary columns\n",
     ")"
    ]
   },
@@ -81,7 +92,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(\n",
-    "    \"https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-03-12/board_games.csv\"\n",
+    "    \"https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-03-12/board_games.csv\"  # noqa: E501\n",
     ")\n",
     "df.head(3)"
    ]
@@ -99,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.clean_names() \n",
+    "df = df.clean_names()\n",
     "df.head(3)"
    ]
   },
@@ -149,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(df[df['compilation'].notnull()]) / len(df)"
+    "len(df[df[\"compilation\"].notnull()]) / len(df)"
    ]
   },
   {
@@ -179,19 +190,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# allow plots to appear directly in the notebook\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -204,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['category'].value_counts().head(10)"
+    "df[\"category\"].value_counts().head(10)"
    ]
   },
   {
@@ -222,10 +220,10 @@
    "source": [
     "sns.pairplot(\n",
     "    df,\n",
-    "    x_vars=['min_age', 'min_players', 'min_playtime'],\n",
-    "    y_vars='users_rated',\n",
+    "    x_vars=[\"min_age\", \"min_players\", \"min_playtime\"],\n",
+    "    y_vars=\"users_rated\",\n",
     "    height=7,\n",
-    "    aspect=0.7\n",
+    "    aspect=0.7,\n",
     ");"
    ]
   },
