--- a/docs/conditional_join.ipynb
+++ b/docs/conditional_join.ipynb
@@ -13,9 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import janitor\n",
-    "import numpy as np"
+    "import pandas as pd"
    ]
   },
   {
@@ -24,13 +23,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://stackoverflow.com/q/61948103/7175713 \n",
-    "df1 = pd.DataFrame({'id': [1,1,1,2,2,3], \n",
-    "                    'value_1': [2,5,7,1,3,4]})\n",
+    "# https://stackoverflow.com/q/61948103/7175713\n",
+    "df1 = pd.DataFrame({\"id\": [1, 1, 1, 2, 2, 3], \"value_1\": [2, 5, 7, 1, 3, 4]})\n",
     "\n",
-    "df2 = pd.DataFrame({'id': [1,1,1,1,2,2,2,3], \n",
-    "                    'value_2A': [0,3,7,12,0,2,3,1], \n",
-    "                    'value_2B': [1,5,9,15,1,4,6,3]})"
+    "df2 = pd.DataFrame(\n",
+    "    {\n",
+    "        \"id\": [1, 1, 1, 1, 2, 2, 2, 3],\n",
+    "        \"value_2A\": [0, 3, 7, 12, 0, 2, 3, 1],\n",
+    "        \"value_2B\": [1, 5, 9, 15, 1, 4, 6, 3],\n",
+    "    }\n",
+    ")"
    ]
   },
   {
@@ -65,12 +67,12 @@
    "outputs": [],
    "source": [
     "df1.conditional_join(\n",
-    "        df2,\n",
-    "        ('id', 'id', '=='),\n",
-    "        ('value_1', 'value_2A', '>='),\n",
-    "        ('value_1', 'value_2B', '<='),\n",
-    "        sort_by_appearance = True\n",
-    "    )"
+    "    df2,\n",
+    "    (\"id\", \"id\", \"==\"),\n",
+    "    (\"value_1\", \"value_2A\", \">=\"),\n",
+    "    (\"value_1\", \"value_2B\", \"<=\"),\n",
+    "    sort_by_appearance=True,\n",
+    ")"
    ]
   },
   {
@@ -87,13 +89,13 @@
    "outputs": [],
    "source": [
     "df1.conditional_join(\n",
-    "        df2,\n",
-    "        ('id', 'id', '=='),\n",
-    "        ('value_1', 'value_2A', '>='),\n",
-    "        ('value_1', 'value_2B', '<='),\n",
-    "        how='left',\n",
-    "        sort_by_appearance = True\n",
-    "    )"
+    "    df2,\n",
+    "    (\"id\", \"id\", \"==\"),\n",
+    "    (\"value_1\", \"value_2A\", \">=\"),\n",
+    "    (\"value_1\", \"value_2B\", \"<=\"),\n",
+    "    how=\"left\",\n",
+    "    sort_by_appearance=True,\n",
+    ")"
    ]
   },
   {
@@ -103,13 +105,13 @@
    "outputs": [],
    "source": [
     "df1.conditional_join(\n",
-    "        df2,\n",
-    "        ('id', 'id', '=='),\n",
-    "        ('value_1', 'value_2A', '>='),\n",
-    "        ('value_1', 'value_2B', '<='),\n",
-    "        how='right',\n",
-    "        sort_by_appearance = True\n",
-    "    )"
+    "    df2,\n",
+    "    (\"id\", \"id\", \"==\"),\n",
+    "    (\"value_1\", \"value_2A\", \">=\"),\n",
+    "    (\"value_1\", \"value_2B\", \"<=\"),\n",
+    "    how=\"right\",\n",
+    "    sort_by_appearance=True,\n",
+    ")"
    ]
   },
   {
@@ -126,12 +128,12 @@
    "outputs": [],
    "source": [
     "df1.conditional_join(\n",
-    "        df2,\n",
-    "        ('value_1', 'value_2A', '>'),\n",
-    "        ('value_1', 'value_2B', '<'),\n",
-    "        how='inner',\n",
-    "        sort_by_appearance = True\n",
-    "    )"
+    "    df2,\n",
+    "    (\"value_1\", \"value_2A\", \">\"),\n",
+    "    (\"value_1\", \"value_2B\", \"<\"),\n",
+    "    how=\"inner\",\n",
+    "    sort_by_appearance=True,\n",
+    ")"
    ]
   },
   {
@@ -147,10 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.conditional_join(\n",
-    "    df2,\n",
-    "    ('id', 'id', \"==\")\n",
-    ")"
+    "df1.conditional_join(df2, (\"id\", \"id\", \"==\"))"
    ]
   },
   {
@@ -166,10 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.conditional_join(\n",
-    "        df2,\n",
-    "        ('id', 'id', \"!=\")\n",
-    "    )"
+    "df1.conditional_join(df2, (\"id\", \"id\", \"!=\"))"
    ]
   },
   {
@@ -185,11 +181,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(df1.select_columns('value_1')\n",
-    "    .conditional_join(\n",
-    "        df2.select_columns('val*'),\n",
-    "        ('value_1', 'value_2A', '>'),\n",
-    "        ('value_1', 'value_2B', '<'),\n",
+    "(\n",
+    "    df1.select_columns(\"value_1\").conditional_join(\n",
+    "        df2.select_columns(\"val*\"),\n",
+    "        (\"value_1\", \"value_2A\", \">\"),\n",
+    "        (\"value_1\", \"value_2B\", \"<\"),\n",
     "    )\n",
     ")"
    ]
