--- a/docs/dirty_data.ipynb
+++ b/docs/dirty_data.ipynb
@@ -31,8 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import janitor"
+    "import janitor\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('dirty_data.xlsx', engine='openpyxl')\n",
+    "df = pd.read_excel(\"dirty_data.xlsx\", engine=\"openpyxl\")\n",
     "df"
    ]
   },
@@ -118,8 +118,7 @@
    "outputs": [],
    "source": [
     "df_clean = (\n",
-    "    df\n",
-    "    .clean_names()\n",
+    "    df.clean_names()\n",
     "    .remove_empty()\n",
     "    .rename_column(\"%_allocated\", \"percent_allocated\")\n",
     "    .rename_column(\"full_time_\", \"full_time\")\n",
@@ -150,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean[['certification', 'certification_1']]"
+    "df_clean[[\"certification\", \"certification_1\"]]"
    ]
   },
   {
@@ -167,15 +166,11 @@
    "outputs": [],
    "source": [
     "df_clean = (\n",
-    "    df\n",
-    "    .clean_names()\n",
+    "    df.clean_names()\n",
     "    .remove_empty()\n",
     "    .rename_column(\"%_allocated\", \"percent_allocated\")\n",
     "    .rename_column(\"full_time_\", \"full_time\")\n",
-    "    .coalesce(\n",
-    "        'certification', 'certification_1',\n",
-    "        new_column_name='certification'\n",
-    "    )\n",
+    "    .coalesce(\"certification\", \"certification_1\", new_column_name=\"certification\")\n",
     ")\n",
     "\n",
     "df_clean"
@@ -205,13 +200,12 @@
    "outputs": [],
    "source": [
     "df_clean = (\n",
-    "    df\n",
-    "    .clean_names()\n",
+    "    df.clean_names()\n",
     "    .remove_empty()\n",
-    "    .rename_column('%_allocated', 'percent_allocated')\n",
-    "    .rename_column('full_time_', 'full_time')\n",
-    "    .coalesce('certification', 'certification_1', target_column_name = 'certification')\n",
-    "    .convert_excel_date('hire_date')\n",
+    "    .rename_column(\"%_allocated\", \"percent_allocated\")\n",
+    "    .rename_column(\"full_time_\", \"full_time\")\n",
+    "    .coalesce(\"certification\", \"certification_1\", target_column_name=\"certification\")\n",
+    "    .convert_excel_date(\"hire_date\")\n",
     ")\n",
     "df_clean"
    ]
