--- a/docs/french_trains.ipynb
+++ b/docs/french_trains.ipynb
@@ -26,9 +26,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import Counter\n",
-    "import janitor\n",
     "import os\n",
+    "from collections import Counter\n",
+    "\n",
+    "import janitor\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "\n",
@@ -57,15 +58,15 @@
     "    .clean_names()  # removes whitespace, punctuation/symbols, capitalization\n",
     "    .remove_empty()  # removes entirely empty rows / columns\n",
     "    .rename_column(\"num_late_at_departure\", \"num_departing_late\")  # renames 1 column\n",
-    "    .drop(columns=[\"service\", \"delay_cause\", \"delayed_number\"])  # drops 3 unnecessary columns\n",
+    "    .drop(\n",
+    "        columns=[\"service\", \"delay_cause\", \"delayed_number\"]\n",
+    "    )  # drops 3 unnecessary columns\n",
     "    # add 2 new columns with a calculation\n",
     "    .join_apply(\n",
-    "        lambda df: df.num_departing_late / df.total_num_trips,\n",
-    "        'prop_late_departures'\n",
+    "        lambda df: df.num_departing_late / df.total_num_trips, \"prop_late_departures\"\n",
     "    )\n",
     "    .join_apply(\n",
-    "        lambda df: df.num_arriving_late / df.total_num_trips, \n",
-    "        'prop_late_arrivals'\n",
+    "        lambda df: df.num_arriving_late / df.total_num_trips, \"prop_late_arrivals\"\n",
     "    )\n",
     ")\n",
     "\n",
@@ -200,7 +201,7 @@
    "outputs": [],
    "source": [
     "# gives us the top ten departure stations from that column\n",
-    "Counter(df['departure_station']).most_common(10)"
+    "Counter(df[\"departure_station\"]).most_common(10)"
    ]
   },
   {
@@ -218,10 +219,10 @@
    "source": [
     "sns.pairplot(\n",
     "    df,\n",
-    "    x_vars=['num_departing_late', 'num_arriving_late'],\n",
-    "    y_vars='total_num_trips',\n",
+    "    x_vars=[\"num_departing_late\", \"num_arriving_late\"],\n",
+    "    y_vars=\"total_num_trips\",\n",
     "    height=7,\n",
-    "    aspect=0.7\n",
+    "    aspect=0.7,\n",
     ")"
    ]
   },
@@ -241,11 +242,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_prop = (\n",
-    "    df.add_columns(\n",
-    "        prop_late_departures=df.num_departing_late / df.total_num_trips,\n",
-    "        prop_late_arrivals=df.num_arriving_late / df.total_num_trips\n",
-    "    )\n",
+    "df_prop = df.add_columns(\n",
+    "    prop_late_departures=df.num_departing_late / df.total_num_trips,\n",
+    "    prop_late_arrivals=df.num_arriving_late / df.total_num_trips,\n",
     ")\n",
     "\n",
     "df_prop.head(3)"
