--- a/docs/groupby_agg.ipynb
+++ b/docs/groupby_agg.ipynb
@@ -37,8 +37,8 @@
    "outputs": [],
    "source": [
     "# load modules\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from janitor import groupby_agg"
    ]
   },
@@ -49,9 +49,9 @@
    "outputs": [],
    "source": [
     "data = {\n",
-    "    'item': ['shoe', 'shoe', 'bag', 'shoe', 'bag'],\n",
-    "    'MRP': [220, 450, 320, 200, 305],\n",
-    "    'number_sold': [100, 40, 56, 38, 25]\n",
+    "    \"item\": [\"shoe\", \"shoe\", \"bag\", \"shoe\", \"bag\"],\n",
+    "    \"MRP\": [220, 450, 320, 200, 305],\n",
+    "    \"number_sold\": [100, 40, 56, 38, 25],\n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data)\n",
@@ -73,10 +73,7 @@
    "outputs": [],
    "source": [
     "df = df.groupby_agg(\n",
-    "    by='item',\n",
-    "    agg='mean',\n",
-    "    agg_column_name='MRP',\n",
-    "    new_column_name='Avg_MRP'\n",
+    "    by=\"item\", agg=\"mean\", agg_column_name=\"MRP\", new_column_name=\"Avg_MRP\"\n",
     ")\n",
     "\n",
     "df"
@@ -96,13 +93,13 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame(\n",
-    "        {\n",
-    "            \"name\": (\"black\", \"black\", \"black\", \"red\", \"red\"),\n",
-    "            \"type\": (\"chair\", \"chair\", \"sofa\", \"sofa\", \"plate\"),\n",
-    "            \"num\": (4, 5, 12, 4, 3),\n",
-    "            \"nulls\": (1, 1, np.nan, np.nan, 3),\n",
-    "        }\n",
-    "    )\n",
+    "    {\n",
+    "        \"name\": (\"black\", \"black\", \"black\", \"red\", \"red\"),\n",
+    "        \"type\": (\"chair\", \"chair\", \"sofa\", \"sofa\", \"plate\"),\n",
+    "        \"num\": (4, 5, 12, 4, 3),\n",
+    "        \"nulls\": (1, 1, np.nan, np.nan, 3),\n",
+    "    }\n",
+    ")\n",
     "\n",
     "df"
    ]
@@ -113,11 +110,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_df = df.groupby_agg(by=['nulls'],\n",
-    "                             agg='size',\n",
-    "                             agg_column_name='type',\n",
-    "                             new_column_name='counter'\n",
-    "                             )\n",
+    "filtered_df = df.groupby_agg(\n",
+    "    by=[\"nulls\"], agg=\"size\", agg_column_name=\"type\", new_column_name=\"counter\"\n",
+    ")\n",
     "filtered_df"
    ]
   },
@@ -134,12 +129,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_df = (df.groupby_agg(by=['name', 'type'],\n",
-    "                             agg='size',\n",
-    "                             agg_column_name='type',\n",
-    "                             new_column_name='counter'\n",
-    "                             )\n",
-    "                .query('counter > 1'))\n",
+    "filtered_df = df.groupby_agg(\n",
+    "    by=[\"name\", \"type\"], agg=\"size\", agg_column_name=\"type\", new_column_name=\"counter\"\n",
+    ").query(\"counter > 1\")\n",
     "filtered_df"
    ]
   },
