--- a/docs/medium_franchise.ipynb
+++ b/docs/medium_franchise.ipynb
@@ -54,21 +54,15 @@
    "outputs": [],
    "source": [
     "# Import pyjanitor and pandas\n",
+    "# Supress user warnings when we try overwriting our custom pandas flavor functions\n",
+    "import warnings\n",
+    "from typing import List\n",
+    "\n",
     "import janitor\n",
     "import pandas as pd\n",
     "import pandas_flavor as pf\n",
-    "from typing import List"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Supress user warnings when we try overwriting our custom pandas flavor functions\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -98,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fileurl = '../data/medium_franchise_raw_table.csv' # originally from https://en.wikipedia.org/wiki/List_of_highest-grossing_media_franchises\n",
+    "fileurl = \"../data/medium_franchise_raw_table.csv\"  # originally from https://en.wikipedia.org/wiki/List_of_highest-grossing_media_franchises\n",
     "df_raw = pd.read_csv(fileurl)\n",
     "df_raw.head(3)"
    ]
@@ -127,7 +121,7 @@
     "\n",
     "# [pandas-flavor]\n",
     "@pf.register_dataframe_method\n",
-    "def str_remove(df, column_name: str, pattern: str = ''):\n",
+    "def str_remove(df, column_name: str, pattern: str = \"\"):\n",
     "    \"\"\"Remove string patten from a column\n",
     "\n",
     "    Wrapper around df.str.replace()\n",
@@ -146,7 +140,7 @@
     "    df: pd.Dataframe\n",
     "\n",
     "    \"\"\"\n",
-    "    df[column_name] = df[column_name].str.replace(pattern, '')\n",
+    "    df[column_name] = df[column_name].str.replace(pattern, \"\")\n",
     "    return df\n",
     "\n",
     "\n",
@@ -175,9 +169,7 @@
     "\n",
     "# [pandas-flavor]\n",
     "@pf.register_dataframe_method\n",
-    "def str_slice(\n",
-    "    df, column_name: str, start: int = 0, stop: int = -1\n",
-    "):\n",
+    "def str_slice(df, column_name: str, start: int = 0, stop: int = -1):\n",
     "    \"\"\"Slice a column of strings by indexes\n",
     "\n",
     "    Parameters\n",
@@ -207,13 +199,13 @@
    "outputs": [],
    "source": [
     "colnames = (\n",
-    "    'franchise',\n",
-    "    'year_created',\n",
-    "    'total_revenue',\n",
-    "    'revenue_items',\n",
-    "    'original_media',\n",
-    "    'creators',\n",
-    "    'owners'\n",
+    "    \"franchise\",\n",
+    "    \"year_created\",\n",
+    "    \"total_revenue\",\n",
+    "    \"revenue_items\",\n",
+    "    \"original_media\",\n",
+    "    \"creators\",\n",
+    "    \"owners\",\n",
     ")\n",
     "df_dirty = df_raw.rename(\n",
     "    columns={col_old: col_new for col_old, col_new in zip(df_raw.columns, colnames)}\n",
@@ -243,11 +235,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "column_name = 'total_revenue'\n",
+    "column_name = \"total_revenue\"\n",
     "df_clean_money = (\n",
-    "    df_dirty.str_remove(column_name, pattern='est.')  # [pandas-flavor]\n",
+    "    df_dirty.str_remove(column_name, pattern=\"est.\")  # [pandas-flavor]\n",
     "    .str_trim(column_name)  # [pandas-flavor]\n",
-    "    .str_remove(column_name, pattern='\\$')   # [pandas-flavor]\n",
+    "    .str_remove(column_name, pattern=\"\\$\")  # [pandas-flavor]\n",
     "    .str_slice(column_name, start=0, stop=2)  # [pandas-flavor]\n",
     "    .change_type(column_name, float)  # [pyjanitor]\n",
     ")\n",
@@ -282,7 +274,7 @@
     "\n",
     "# [pandas-flavor]\n",
     "@pf.register_dataframe_method\n",
-    "def separate_rows(df, column_name: str, sep: str = ''):\n",
+    "def separate_rows(df, column_name: str, sep: str = \"\"):\n",
     "    \"\"\"Split each cell of a column that contains a list of items\n",
     "    (separated by `sep`) into separate rows\n",
     "\n",
@@ -302,15 +294,11 @@
     "    \"\"\"\n",
     "    # Preserve an id field for later merge\n",
     "    columns_original = list(df.columns)\n",
-    "    df['id'] = df.index\n",
-    "    wdf = (\n",
-    "        pd.DataFrame(\n",
-    "            df[column_name].str.split(sep).tolist()\n",
-    "        ).stack().reset_index()\n",
-    "    )\n",
+    "    df[\"id\"] = df.index\n",
+    "    wdf = pd.DataFrame(df[column_name].str.split(sep).tolist()).stack().reset_index()\n",
     "    # Preserve the same id field for merge\n",
-    "    wdf.rename(columns={'level_0': 'id', 0: 'revenue_items'}, inplace=True)\n",
-    "    wdf.drop(columns=['level_1'], inplace=True)\n",
+    "    wdf.rename(columns={\"level_0\": \"id\", 0: \"revenue_items\"}, inplace=True)\n",
+    "    wdf.drop(columns=[\"level_1\"], inplace=True)\n",
     "    # Merge and preserve original order\n",
     "    return pd.merge(df, wdf, on=\"id\", suffixes=(\"_drop\", \"\")).drop(\n",
     "        columns=[\"id\", column_name + \"_drop\"]\n",
@@ -319,7 +307,7 @@
     "\n",
     "# [pyjanitor + pandas-flavor]\n",
     "@pf.register_dataframe_method\n",
-    "def separate(df, column_name: str, into: List[str] = None, sep: str = ''):\n",
+    "def separate(df, column_name: str, into: List[str] = None, sep: str = \"\"):\n",
     "    \"\"\"Split a column into separate columns at separator specified by `sep`\n",
     "\n",
     "    Parameters\n",
@@ -343,10 +331,9 @@
     "    cols.remove(column_name)\n",
     "    for i, col in enumerate(into):\n",
     "        cols.insert(index_original + i, col)\n",
-    "    return (\n",
-    "        df.deconcatenate_column(column_name, new_column_names=into, sep=sep)\n",
-    "        .drop(columns=column_name)[cols]\n",
-    "    )"
+    "    return df.deconcatenate_column(column_name, new_column_names=into, sep=sep).drop(\n",
+    "        columns=column_name\n",
+    "    )[cols]"
    ]
   },
   {
@@ -356,16 +343,16 @@
    "outputs": [],
    "source": [
     "# Generate `df_clean_category` on top of `df_clean_money`\n",
-    "column_name = 'revenue_items'\n",
+    "column_name = \"revenue_items\"\n",
     "df_clean_category = (\n",
-    "    df_clean_money.separate_rows(column_name, sep='\\[')  # [pandas-flavor]\n",
-    "    .filter_string(column_name, 'illion')  # [pyjanitor]\n",
+    "    df_clean_money.separate_rows(column_name, sep=\"\\[\")  # [pandas-flavor]\n",
+    "    .filter_string(column_name, \"illion\")  # [pyjanitor]\n",
     "    .separate(\n",
-    "        column_name, into=['revenue_category', 'revenue'], sep='\\$'\n",
+    "        column_name, into=[\"revenue_category\", \"revenue\"], sep=\"\\$\"\n",
     "    )  # [pyjanitor + pandas-flavor]\n",
-    "    .str_remove('revenue_category', pattern=' – ')  # [pandas-flavor]\n",
-    "    .str_remove('revenue_category', pattern='.*\\]')  # [pandas-flavor]\n",
-    "    .str_remove('revenue_category', pattern='\\n')  # [pandas-flavor]\n",
+    "    .str_remove(\"revenue_category\", pattern=\" – \")  # [pandas-flavor]\n",
+    "    .str_remove(\"revenue_category\", pattern=\".*\\]\")  # [pandas-flavor]\n",
+    "    .str_remove(\"revenue_category\", pattern=\"\\n\")  # [pandas-flavor]\n",
     ")\n",
     "df_clean_category.head(3)"
    ]
@@ -434,20 +421,26 @@
    "source": [
     "# Value mapper `revenue_category`\n",
     "value_mapper = {\n",
-    "    'box office': 'Box Office',\n",
-    "    'dvd|blu|vhs|home video|video rentals|video sales|streaming|home entertainment': 'Home Video/Entertainment',\n",
-    "    'video game|computer game|mobile game|console|game|pachinko|pet|card': 'Video Games/Games',\n",
-    "    'comic|manga': 'Comic or Manga',\n",
-    "    'music|soundtrac': 'Music',\n",
-    "    'tv': 'TV',\n",
-    "    'merchandise|licens|mall|stage|retail': 'Merchandise, Licensing & Retail',\n",
+    "    \"box office\": \"Box Office\",\n",
+    "    \"dvd|blu|vhs|home video|video rentals|video sales|streaming|home entertainment\": \"Home Video/Entertainment\",\n",
+    "    \"video game|computer game|mobile game|console|game|pachinko|pet|card\": \"Video Games/Games\",\n",
+    "    \"comic|manga\": \"Comic or Manga\",\n",
+    "    \"music|soundtrac\": \"Music\",\n",
+    "    \"tv\": \"TV\",\n",
+    "    \"merchandise|licens|mall|stage|retail\": \"Merchandise, Licensing & Retail\",\n",
     "}\n",
     "\n",
-    "column_name = 'revenue_category'\n",
+    "column_name = \"revenue_category\"\n",
     "df_clean_category = (\n",
-    "    df_clean_category.transform_column(column_name, str.lower)  # [pyjanitor] convert to lower case\n",
-    "    .transform_column(column_name, str.strip)  # [pyjanitor] strip leading/trailing white space\n",
-    "    .fuzzy_match_replace(column_name, mapper=value_mapper)  # [pyjanitor + pandas_flavor]\n",
+    "    df_clean_category.transform_column(\n",
+    "        column_name, str.lower\n",
+    "    )  # [pyjanitor] convert to lower case\n",
+    "    .transform_column(\n",
+    "        column_name, str.strip\n",
+    "    )  # [pyjanitor] strip leading/trailing white space\n",
+    "    .fuzzy_match_replace(\n",
+    "        column_name, mapper=value_mapper\n",
+    "    )  # [pyjanitor + pandas_flavor]\n",
     ")\n",
     "df_clean_category.head(3)"
    ]
@@ -483,7 +476,7 @@
     "\n",
     "# [pandas-flavor]\n",
     "@pf.register_dataframe_method\n",
-    "def str_replace(df, column_name: str, old: str = '', new: str = ''):\n",
+    "def str_replace(df, column_name: str, old: str = \"\", new: str = \"\"):\n",
     "    \"\"\"Match and replace strings from a dataframe column.\n",
     "    Wrapper around df.str.replace\n",
     "\n",
@@ -525,7 +518,7 @@
     "    for col in df.columns:\n",
     "        try:\n",
     "            df[col] = pd.to_numeric(df[col])\n",
-    "        except ValueError as e:\n",
+    "        except ValueError:\n",
     "            continue\n",
     "    return df\n",
     "\n",
@@ -556,15 +549,15 @@
    "outputs": [],
    "source": [
     "# clean up revenue values\n",
-    "column_name = 'revenue'\n",
+    "column_name = \"revenue\"\n",
     "df_clean = (\n",
-    "    df_clean_category.str_remove(column_name, 'illion')  # [pandas-flavor]\n",
+    "    df_clean_category.str_remove(column_name, \"illion\")  # [pandas-flavor]\n",
     "    .str_trim(column_name)  # [pandas-flavor]\n",
-    "    .str_remove(column_name, ' ')  # [pandas-flavor]\n",
-    "    .str_replace(column_name, '\\s*b', '')  # [pandas-flavor]\n",
-    "    .str_replace(column_name, '\\s*m', 'e-3')  # [pandas-flavor]\n",
+    "    .str_remove(column_name, \" \")  # [pandas-flavor]\n",
+    "    .str_replace(column_name, \"\\s*b\", \"\")  # [pandas-flavor]\n",
+    "    .str_replace(column_name, \"\\s*m\", \"e-3\")  # [pandas-flavor]\n",
     "    .parse_number()  # [pandas-flavor]\n",
-    "    .str_remove('original_media', '\\[.+')  # [pandas-flavor]\n",
+    "    .str_remove(\"original_media\", \"\\[.+\")  # [pandas-flavor]\n",
     ")\n",
     "df_clean.head(3)"
    ]
@@ -589,29 +582,35 @@
     "    .rename(\n",
     "        columns={col_old: col_new for col_old, col_new in zip(df_raw.columns, colnames)}\n",
     "    )\n",
-    "    .str_remove('total_revenue', pattern='est.')  # [pandas-flavor]\n",
-    "    .str_trim('total_revenue')  # [pandas-flavor]\n",
-    "    .str_remove('total_revenue', pattern='\\$')   # [pandas-flavor]\n",
-    "    .str_slice('total_revenue', start=0, stop=2)  # [pandas-flavor]\n",
-    "    .change_type('total_revenue', float)  # [pyjanitor]\n",
-    "    .separate_rows('revenue_items', sep='\\[')  # [pandas-flavor]\n",
-    "    .filter_string('revenue_items', 'illion')  # [pyjanitor]\n",
+    "    .str_remove(\"total_revenue\", pattern=\"est.\")  # [pandas-flavor]\n",
+    "    .str_trim(\"total_revenue\")  # [pandas-flavor]\n",
+    "    .str_remove(\"total_revenue\", pattern=\"\\$\")  # [pandas-flavor]\n",
+    "    .str_slice(\"total_revenue\", start=0, stop=2)  # [pandas-flavor]\n",
+    "    .change_type(\"total_revenue\", float)  # [pyjanitor]\n",
+    "    .separate_rows(\"revenue_items\", sep=\"\\[\")  # [pandas-flavor]\n",
+    "    .filter_string(\"revenue_items\", \"illion\")  # [pyjanitor]\n",
     "    .separate(\n",
-    "        'revenue_items', into=['revenue_category', 'revenue'], sep='\\$'\n",
+    "        \"revenue_items\", into=[\"revenue_category\", \"revenue\"], sep=\"\\$\"\n",
     "    )  # [pyjanitor + pandas-flavor]\n",
-    "    .str_remove('revenue_category', pattern=' – ')  # [pandas-flavor]\n",
-    "    .str_remove('revenue_category', pattern='.*\\]')  # [pandas-flavor]\n",
-    "    .str_remove('revenue_category', pattern='\\n')  # [pandas-flavor]\n",
-    "    .transform_column('revenue_category', str.lower)  # [pyjanitor] convert to lower case\n",
-    "    .transform_column('revenue_category', str.strip)  # [pyjanitor] strip leading/trailing white space\n",
-    "    .fuzzy_match_replace('revenue_category', mapper=value_mapper)  # [pyjanitor + pandas_flavor]\n",
-    "    .str_remove('revenue', 'illion')  # [pandas-flavor]\n",
-    "    .str_trim('revenue')  # [pandas-flavor]\n",
-    "    .str_remove('revenue', ' ')  # [pandas-flavor]\n",
-    "    .str_replace('revenue', '\\s*b', '')  # [pandas-flavor]\n",
-    "    .str_replace('revenue', '\\s*m', 'e-3')  # [pandas-flavor]\n",
+    "    .str_remove(\"revenue_category\", pattern=\" – \")  # [pandas-flavor]\n",
+    "    .str_remove(\"revenue_category\", pattern=\".*\\]\")  # [pandas-flavor]\n",
+    "    .str_remove(\"revenue_category\", pattern=\"\\n\")  # [pandas-flavor]\n",
+    "    .transform_column(\n",
+    "        \"revenue_category\", str.lower\n",
+    "    )  # [pyjanitor] convert to lower case\n",
+    "    .transform_column(\n",
+    "        \"revenue_category\", str.strip\n",
+    "    )  # [pyjanitor] strip leading/trailing white space\n",
+    "    .fuzzy_match_replace(\n",
+    "        \"revenue_category\", mapper=value_mapper\n",
+    "    )  # [pyjanitor + pandas_flavor]\n",
+    "    .str_remove(\"revenue\", \"illion\")  # [pandas-flavor]\n",
+    "    .str_trim(\"revenue\")  # [pandas-flavor]\n",
+    "    .str_remove(\"revenue\", \" \")  # [pandas-flavor]\n",
+    "    .str_replace(\"revenue\", \"\\s*b\", \"\")  # [pandas-flavor]\n",
+    "    .str_replace(\"revenue\", \"\\s*m\", \"e-3\")  # [pandas-flavor]\n",
     "    .parse_number()  # [pandas-flavor]\n",
-    "    .str_remove('original_media', '\\[.+')  # [pandas-flavor]\n",
+    "    .str_remove(\"original_media\", \"\\[.+\")  # [pandas-flavor]\n",
     ")"
    ]
   },
@@ -645,11 +644,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sum = (\n",
-    "    df_clean.groupby(['franchise', 'revenue_category'])\n",
-    "    .sum()\n",
-    "    .flatten_multiindex()\n",
-    ")\n",
+    "df_sum = df_clean.groupby([\"franchise\", \"revenue_category\"]).sum().flatten_multiindex()\n",
     "df_sum.head(3)"
    ]
   },
@@ -659,9 +654,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_metadata = df_clean[\n",
-    "    ['franchise', 'revenue_category', 'original_media', 'creators']\n",
-    "]\n",
+    "df_metadata = df_clean[[\"franchise\", \"revenue_category\", \"original_media\", \"creators\"]]\n",
     "df_metadata.head(3)"
    ]
   },
@@ -681,10 +674,8 @@
    "source": [
     "# Generate final dataframe\n",
     "df_final = (\n",
-    "    pd.merge(\n",
-    "        df_sum, df_metadata, how='left', on=['franchise', 'revenue_category']\n",
-    "    )\n",
-    "    .drop_duplicates(keep='first')\n",
+    "    pd.merge(df_sum, df_metadata, how=\"left\", on=[\"franchise\", \"revenue_category\"])\n",
+    "    .drop_duplicates(keep=\"first\")\n",
     "    .reset_index(drop=True)\n",
     ")\n",
     "df_final.head(3)"
