--- a/docs/normalize.ipynb
+++ b/docs/normalize.ipynb
@@ -23,8 +23,8 @@
    "source": [
     "import janitor\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import seaborn as sns\n",
+    "\n",
     "sns.set(style=\"whitegrid\")"
    ]
   },
@@ -43,9 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file = (\n",
-    "    'https://gist.githubusercontent.com/seankross/a412dfbd88b3db70b74b/raw/5f23f993cd87c283ce766e7ac6b329ee7cc2e1d1/mtcars.csv'\n",
-    ")\n",
+    "csv_file = \"https://gist.githubusercontent.com/seankross/a412dfbd88b3db70b74b/raw/5f23f993cd87c283ce766e7ac6b329ee7cc2e1d1/mtcars.csv\"\n",
     "cars_df = pd.read_csv(csv_file)"
    ]
   },
@@ -62,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cars_df = cars_df.rename_column('disp', 'disp_cc')"
+    "cars_df = cars_df.rename_column(\"disp\", \"disp_cc\")"
    ]
   },
   {
@@ -103,8 +101,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cars_df = cars_df.sort_values('mpg', ascending=False)\n",
-    "sns.barplot(y='model', x='mpg', data=cars_df, color='b', orient=\"h\", )"
+    "cars_df = cars_df.sort_values(\"mpg\", ascending=False)\n",
+    "sns.barplot(\n",
+    "    y=\"model\",\n",
+    "    x=\"mpg\",\n",
+    "    data=cars_df,\n",
+    "    color=\"b\",\n",
+    "    orient=\"h\",\n",
+    ")"
    ]
   },
   {
@@ -120,8 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cars_df = cars_df.sort_values('disp_cc', ascending=False)\n",
-    "sns.barplot(y='model', x='disp_cc', data=cars_df, color='b', orient=\"h\")"
+    "cars_df = cars_df.sort_values(\"disp_cc\", ascending=False)\n",
+    "sns.barplot(y=\"model\", x=\"disp_cc\", data=cars_df, color=\"b\", orient=\"h\")"
    ]
   },
   {
@@ -137,8 +141,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cars_df = cars_df.sort_values('hp', ascending=False)\n",
-    "sns.barplot(y='model', x='hp', data=cars_df, color='b', orient=\"h\")"
+    "cars_df = cars_df.sort_values(\"hp\", ascending=False)\n",
+    "sns.barplot(y=\"model\", x=\"hp\", data=cars_df, color=\"b\", orient=\"h\")"
    ]
   },
   {
@@ -157,9 +161,9 @@
    "outputs": [],
    "source": [
     "(\n",
-    "    cars_df.min_max_scale(col_name='mpg', new_max=1, new_min=0)\n",
-    "    .min_max_scale(col_name='disp_cc', new_max=1, new_min=0)\n",
-    "    .min_max_scale(col_name='hp', new_max=1, new_min=0)\n",
+    "    cars_df.min_max_scale(col_name=\"mpg\", new_max=1, new_min=0)\n",
+    "    .min_max_scale(col_name=\"disp_cc\", new_max=1, new_min=0)\n",
+    "    .min_max_scale(col_name=\"hp\", new_max=1, new_min=0)\n",
     ")"
    ]
   },
@@ -183,8 +187,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cars_df = cars_df.sort_values('mpg', ascending=False)\n",
-    "sns.barplot(y='model', x='mpg', data=cars_df, color='b', orient=\"h\")"
+    "cars_df = cars_df.sort_values(\"mpg\", ascending=False)\n",
+    "sns.barplot(y=\"model\", x=\"mpg\", data=cars_df, color=\"b\", orient=\"h\")"
    ]
   },
   {
@@ -200,8 +204,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cars_df = cars_df.sort_values('disp_cc', ascending=False)\n",
-    "sns.barplot(y='model', x='disp_cc', data=cars_df, color='b', orient=\"h\")"
+    "cars_df = cars_df.sort_values(\"disp_cc\", ascending=False)\n",
+    "sns.barplot(y=\"model\", x=\"disp_cc\", data=cars_df, color=\"b\", orient=\"h\")"
    ]
   },
   {
@@ -217,8 +221,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cars_df = cars_df.sort_values('hp', ascending=False)\n",
-    "sns.barplot(y='model', x='hp', data=cars_df, color='b', orient=\"h\")"
+    "cars_df = cars_df.sort_values(\"hp\", ascending=False)\n",
+    "sns.barplot(y=\"model\", x=\"hp\", data=cars_df, color=\"b\", orient=\"h\")"
    ]
   },
   {
@@ -239,9 +243,7 @@
    "outputs": [],
    "source": [
     "cars_df.transform_columns(\n",
-    "    ['mpg', 'disp_cc', 'hp'],\n",
-    "    lambda x: (x - x.mean()) / x.std(),\n",
-    "    elementwise=False\n",
+    "    [\"mpg\", \"disp_cc\", \"hp\"], lambda x: (x - x.mean()) / x.std(), elementwise=False\n",
     ")"
    ]
   },
@@ -258,8 +260,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cars_df = cars_df.sort_values('mpg', ascending=False)\n",
-    "sns.barplot(y='model', x='mpg', data=cars_df, color='b', orient=\"h\", )"
+    "cars_df = cars_df.sort_values(\"mpg\", ascending=False)\n",
+    "sns.barplot(\n",
+    "    y=\"model\",\n",
+    "    x=\"mpg\",\n",
+    "    data=cars_df,\n",
+    "    color=\"b\",\n",
+    "    orient=\"h\",\n",
+    ")"
    ]
   },
   {
@@ -275,8 +283,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cars_df = cars_df.sort_values('disp_cc', ascending=False)\n",
-    "sns.barplot(y='model', x='disp_cc', data=cars_df, color='b', orient=\"h\")"
+    "cars_df = cars_df.sort_values(\"disp_cc\", ascending=False)\n",
+    "sns.barplot(y=\"model\", x=\"disp_cc\", data=cars_df, color=\"b\", orient=\"h\")"
    ]
   },
   {
@@ -292,8 +300,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cars_df = cars_df.sort_values('hp', ascending=False)\n",
-    "sns.barplot(y='model', x='hp', data=cars_df, color='b', orient=\"h\")"
+    "cars_df = cars_df.sort_values(\"hp\", ascending=False)\n",
+    "sns.barplot(y=\"model\", x=\"hp\", data=cars_df, color=\"b\", orient=\"h\")"
    ]
   }
  ],
