--- a/docs/pyjanitor_intro.ipynb
+++ b/docs/pyjanitor_intro.ipynb
@@ -142,10 +142,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import janitor\n",
-    "import pandas_flavor as pf\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -161,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('dirty_data.xlsx', engine='openpyxl')\n",
+    "df = pd.read_excel(\"dirty_data.xlsx\", engine=\"openpyxl\")\n",
     "df"
    ]
   },
@@ -192,7 +191,7 @@
    "outputs": [],
    "source": [
     "cleaned_df = (\n",
-    "    pd.read_excel('dirty_data.xlsx', engine='openpyxl')\n",
+    "    pd.read_excel(\"dirty_data.xlsx\", engine=\"openpyxl\")\n",
     "    .clean_names()\n",
     "    .remove_empty()\n",
     "    .rename_column(\"%_allocated\", \"percent_allocated\")\n",
@@ -230,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('dirty_data.xlsx', engine='openpyxl')\n",
+    "df = pd.read_excel(\"dirty_data.xlsx\", engine=\"openpyxl\")\n",
     "df"
    ]
   },
@@ -281,9 +280,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = (\n",
-    "    df.rename_column(\"%_allocated\", \"percent_allocated\")\n",
-    "    .rename_column(\"full_time_\", \"full_time\")\n",
+    "df = df.rename_column(\"%_allocated\", \"percent_allocated\").rename_column(\n",
+    "    \"full_time_\", \"full_time\"\n",
     ")\n",
     "df"
    ]
@@ -368,14 +366,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_df = (\n",
-    "    cleaned_df\n",
-    "    .copy()\n",
-    "    .add_columns(\n",
-    "        lucky_number=np.random.randint(0, 10, len(cleaned_df)),\n",
-    "        age=np.random.randint(10, 100, len(cleaned_df)),\n",
-    "        employee_of_month_count=np.random.randint(0, 5, len(cleaned_df))\n",
-    "    )\n",
+    "data_df = cleaned_df.copy().add_columns(\n",
+    "    lucky_number=np.random.randint(0, 10, len(cleaned_df)),\n",
+    "    age=np.random.randint(10, 100, len(cleaned_df)),\n",
+    "    employee_of_month_count=np.random.randint(0, 5, len(cleaned_df)),\n",
     ")\n",
     "\n",
     "data_df"
@@ -395,8 +389,8 @@
    "outputs": [],
    "source": [
     "stats_df = (\n",
-    "    data_df.groupby('employee_status')\n",
-    "    .agg(['mean', 'median'])\n",
+    "    data_df.groupby(\"employee_status\")\n",
+    "    .agg([\"mean\", \"median\"])\n",
     "    .collapse_levels()\n",
     "    .reset_index()\n",
     ")\n",
