--- a/docs/transform_column.ipynb
+++ b/docs/transform_column.ipynb
@@ -6,10 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "%matplotlib inline\n",
-    "%config InlineBackend.figure_format = 'retina'"
+    "from random import choice\n",
+    "\n",
+    "import janitor\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -28,17 +29,6 @@
     "There are two ways to use the `transform_column` function: by passing in a function that operates elementwise, or by passing in a function that operates columnwise.\n",
     "\n",
     "We will show you both in this notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import janitor\n",
-    "import pandas as pd\n",
-    "import numpy as np"
    ]
   },
   {
@@ -130,10 +120,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from random import choice\n",
-    "\n",
     "def make_strings(length: int):\n",
     "    return \"\".join(choice(\"ABCDEFGHIJKLMNOPQRSTUVWXYZ\") for _ in range(length))\n",
+    "\n",
     "\n",
     "strings = (make_strings(30) for _ in range(1_000_000))\n",
     "\n",
