--- a/docs/Row_to_Names.ipynb
+++ b/docs/Row_to_Names.ipynb
@@ -27,9 +27,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "from io import StringIO\n",
+    "\n",
     "import janitor\n",
-    "from io import StringIO"
+    "import pandas as pd"
    ]
   },
   {
@@ -38,12 +39,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = '''shoe, 220, 100\n",
+    "data = \"\"\"shoe, 220, 100\n",
     "          shoe, 450, 40\n",
     "          item, retail_price, cost\n",
     "          shoe, 200, 38\n",
     "          bag, 305, 25\n",
-    "       '''"
+    "       \"\"\""
    ]
   },
   {
@@ -77,7 +78,7 @@
     "temp.columns = temp.iloc[2, :]\n",
     "temp.columns = temp.columns.str.strip()\n",
     "temp = temp.drop(2, axis=0)\n",
-    "temp = temp.rename_axis(None, axis='columns')\n",
+    "temp = temp.rename_axis(None, axis=\"columns\")\n",
     "temp"
    ]
   },
@@ -94,9 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = (\n",
-    "    pd.read_csv(StringIO(data), header=None)\n",
-    "    .row_to_names(row_number=2, remove_row=True)\n",
+    "df = pd.read_csv(StringIO(data), header=None).row_to_names(\n",
+    "    row_number=2, remove_row=True\n",
     ")\n",
     "\n",
     "df"
