--- a/docs/bad_values.ipynb
+++ b/docs/bad_values.ipynb
@@ -19,9 +19,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import janitor\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -98,18 +98,15 @@
    "outputs": [],
    "source": [
     "mapping = {-9999.0: np.nan}\n",
-    "wind2 = (\n",
-    "    wind\n",
-    "    .find_replace(\n",
-    "        usgs_pr_id=mapping,\n",
-    "        p_tnum=mapping,\n",
-    "        p_cap=mapping,\n",
-    "        t_cap=mapping,\n",
-    "        t_hh=mapping,\n",
-    "        t_rd=mapping,\n",
-    "        t_rsa=mapping,\n",
-    "        t_ttlh=mapping,\n",
-    "    )\n",
+    "wind2 = wind.find_replace(\n",
+    "    usgs_pr_id=mapping,\n",
+    "    p_tnum=mapping,\n",
+    "    p_cap=mapping,\n",
+    "    t_cap=mapping,\n",
+    "    t_hh=mapping,\n",
+    "    t_rd=mapping,\n",
+    "    t_rsa=mapping,\n",
+    "    t_ttlh=mapping,\n",
     ")\n",
     "wind2.head()"
    ]
@@ -170,10 +167,10 @@
     "# Note that update_where mutates the original dataframe\n",
     "(\n",
     "    wind.update_where(\n",
-    "        (wind['p_year'] < 1887) | (wind['p_year'] > 2018), 'p_year', np.nan\n",
+    "        (wind[\"p_year\"] < 1887) | (wind[\"p_year\"] > 2018), \"p_year\", np.nan\n",
     "    )\n",
-    "    .update_where((wind['t_hh'] <= 0) | (wind['t_hh'] >= 1000), 't_hh', np.nan)\n",
-    "    .update_where((wind['xlong'] < -161.76) | (wind['xlong'] > -68.01), 'xlong', np.nan)\n",
+    "    .update_where((wind[\"t_hh\"] <= 0) | (wind[\"t_hh\"] >= 1000), \"t_hh\", np.nan)\n",
+    "    .update_where((wind[\"xlong\"] < -161.76) | (wind[\"xlong\"] > -68.01), \"xlong\", np.nan)\n",
     ");"
    ]
   },
