--- a/docs/complete.ipynb
+++ b/docs/complete.ipynb
@@ -13,9 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np \n",
-    "import janitor"
+    "import janitor\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -26,18 +26,18 @@
    "source": [
     "# from http://imachordata.com/2016/02/05/you-complete-me/\n",
     "df = pd.DataFrame(\n",
-    "        {\n",
-    "            \"Year\": [1999, 2000, 2004, 1999, 2004],\n",
-    "            \"Taxon\": [\n",
-    "                \"Saccharina\",\n",
-    "                \"Saccharina\",\n",
-    "                \"Saccharina\",\n",
-    "                \"Agarum\",\n",
-    "                \"Agarum\",\n",
-    "            ],\n",
-    "            \"Abundance\": [4, 5, 2, 1, 8],\n",
-    "        }\n",
-    "    )\n",
+    "    {\n",
+    "        \"Year\": [1999, 2000, 2004, 1999, 2004],\n",
+    "        \"Taxon\": [\n",
+    "            \"Saccharina\",\n",
+    "            \"Saccharina\",\n",
+    "            \"Saccharina\",\n",
+    "            \"Agarum\",\n",
+    "            \"Agarum\",\n",
+    "        ],\n",
+    "        \"Abundance\": [4, 5, 2, 1, 8],\n",
+    "    }\n",
+    ")\n",
     "\n",
     "df"
    ]
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.complete('Year', 'Taxon')"
+    "df.complete(\"Year\", \"Taxon\")"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# A better viewing based on order\n",
-    "df.complete('Year', 'Taxon', sort = True)"
+    "df.complete(\"Year\", \"Taxon\", sort=True)"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_year_values = {'Year': range(df.Year.min(), df.Year.max() + 1)}\n",
+    "new_year_values = {\"Year\": range(df.Year.min(), df.Year.max() + 1)}\n",
     "\n",
     "df.complete(new_year_values, \"Taxon\")"
    ]
@@ -99,9 +99,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_year_values = lambda year: range(year.min(), year.max() + 1)\n",
+    "def new_year_values(year):\n",
+    "    return range(year.min(), year.max() + 1)\n",
     "\n",
-    "df.complete({\"Year\": new_year_values}, \"Taxon\", sort = True)"
+    "\n",
+    "df.complete({\"Year\": new_year_values}, \"Taxon\", sort=True)"
    ]
   },
   {
@@ -118,12 +120,13 @@
    "outputs": [],
    "source": [
     "# https://stackoverflow.com/q/62266057/7175713\n",
-    "df = {\"Name\" : (\"Bob\", \"Bob\", \"Emma\"), \n",
-    "       \"Age\" : (23,23,78), \n",
-    "       \"Gender\" :(\"Male\", \"Male\", \"Female\"), \n",
-    "       \"Item\" : (\"house\", \"car\", \"house\"), \n",
-    "       \"Value\" : (5,1,3)\n",
-    "        }\n",
+    "df = {\n",
+    "    \"Name\": (\"Bob\", \"Bob\", \"Emma\"),\n",
+    "    \"Age\": (23, 23, 78),\n",
+    "    \"Gender\": (\"Male\", \"Male\", \"Female\"),\n",
+    "    \"Item\": (\"house\", \"car\", \"house\"),\n",
+    "    \"Value\": (5, 1, 3),\n",
+    "}\n",
     "df = pd.DataFrame(df)\n",
     "df"
    ]
@@ -141,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.complete(('Name', 'Age', 'Gender'), 'Item')"
+    "df.complete((\"Name\", \"Age\", \"Gender\"), \"Item\")"
    ]
   },
   {
@@ -158,12 +161,12 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame(\n",
-    "        {\n",
-    "            \"state\": [\"CA\", \"CA\", \"HI\", \"HI\", \"HI\", \"NY\", \"NY\"],\n",
-    "            \"year\": [2010, 2013, 2010, 2012, 2016, 2009, 2013],\n",
-    "            \"value\": [1, 3, 1, 2, 3, 2, 5],\n",
-    "        }\n",
-    "    )\n",
+    "    {\n",
+    "        \"state\": [\"CA\", \"CA\", \"HI\", \"HI\", \"HI\", \"NY\", \"NY\"],\n",
+    "        \"year\": [2010, 2013, 2010, 2012, 2016, 2009, 2013],\n",
+    "        \"value\": [1, 3, 1, 2, 3, 2, 5],\n",
+    "    }\n",
+    ")\n",
     "\n",
     "df"
    ]
@@ -181,11 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = df.complete(\n",
-    "            {'year': new_year_values},\n",
-    "            by='state',\n",
-    "            sort = True\n",
-    "        )\n",
+    "result = df.complete({\"year\": new_year_values}, by=\"state\", sort=True)\n",
     "\n",
     "result"
    ]
@@ -203,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result.fillna(0, downcast = 'infer')"
+    "result.fillna(0, downcast=\"infer\")"
    ]
   }
  ],
