--- a/docs/expand_grid.ipynb
+++ b/docs/expand_grid.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from janitor import expand_grid"
    ]
   },
@@ -36,55 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {\"x\":[1,2,3], \"y\":[1,2]}\n",
-    "\n",
-    "result = expand_grid(others = data)\n",
-    "\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#combination of letters\n",
-    "\n",
-    "data = {\"l1\":list(\"abcde\"), \"l2\" : list(\"ABCDE\")}\n",
-    "\n",
-    "letters = expand_grid(others = data)\n",
-    "\n",
-    "letters.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "data = {'height': [60, 70],\n",
-    "        'weight': [100, 140, 180],\n",
-    "        'sex': ['Male', 'Female']}\n",
-    "\n",
-    "result = expand_grid(others = data)\n",
-    "\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#A dictionary of arrays\n",
-    "#Arrays can only have dimensions of 1 or 2\n",
-    "\n",
-    "data = {\"x1\":np.array([[1,3],[2,4]]), \n",
-    "        \"x2\":np.array([[5,7],[6,8]])}\n",
+    "data = {\"x\": [1, 2, 3], \"y\": [1, 2]}\n",
     "\n",
     "result = expand_grid(others=data)\n",
     "\n",
@@ -97,16 +49,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#This shows how to method chain expand_grid\n",
-    "#to an existing dataframe\n",
+    "# combination of letters\n",
     "\n",
-    "df = pd.DataFrame({\"x\":[1,2], \"y\":[2,1]})\n",
-    "data = {\"z\":[1,2,3]}\n",
+    "data = {\"l1\": list(\"abcde\"), \"l2\": list(\"ABCDE\")}\n",
     "\n",
-    "#a key has to be passed in for the dataframe\n",
-    "#this is added to the column name of the dataframe\n",
+    "letters = expand_grid(others=data)\n",
     "\n",
-    "result = df.expand_grid(df_key=\"df\",others = data)\n",
+    "letters.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\"height\": [60, 70], \"weight\": [100, 140, 180], \"sex\": [\"Male\", \"Female\"]}\n",
+    "\n",
+    "result = expand_grid(others=data)\n",
     "\n",
     "result"
    ]
@@ -117,16 +77,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# A dictionary of arrays\n",
+    "# Arrays can only have dimensions of 1 or 2\n",
     "\n",
+    "data = {\"x1\": np.array([[1, 3], [2, 4]]), \"x2\": np.array([[5, 7], [6, 8]])}\n",
+    "\n",
+    "result = expand_grid(others=data)\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This shows how to method chain expand_grid\n",
+    "# to an existing dataframe\n",
+    "\n",
+    "df = pd.DataFrame({\"x\": [1, 2], \"y\": [2, 1]})\n",
+    "data = {\"z\": [1, 2, 3]}\n",
+    "\n",
+    "# a key has to be passed in for the dataframe\n",
+    "# this is added to the column name of the dataframe\n",
+    "\n",
+    "result = df.expand_grid(df_key=\"df\", others=data)\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# expand_grid can work on multiple dataframes\n",
     "# Ensure that there are keys\n",
     "# for each dataframe in the dictionary\n",
     "\n",
-    "df1 = pd.DataFrame({\"x\":range(1,3), \"y\":[2,1]})\n",
-    "df2 = pd.DataFrame({\"x\":[1,2,3],\"y\":[3,2,1]})\n",
-    "df3 = pd.DataFrame({\"x\":[2,3],\"y\":[\"a\",\"b\"]})\n",
+    "df1 = pd.DataFrame({\"x\": range(1, 3), \"y\": [2, 1]})\n",
+    "df2 = pd.DataFrame({\"x\": [1, 2, 3], \"y\": [3, 2, 1]})\n",
+    "df3 = pd.DataFrame({\"x\": [2, 3], \"y\": [\"a\", \"b\"]})\n",
     "\n",
-    "data = {\"df1\":df1, \"df2\":df2, \"df3\":df3}\n",
+    "data = {\"df1\": df1, \"df2\": df2, \"df3\": df3}\n",
     "\n",
     "result = expand_grid(others=data)\n",
     "\n",
@@ -162,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "letters.droplevel(level = -1, axis = 'columns').head(10)"
+    "letters.droplevel(level=-1, axis=\"columns\").head(10)"
    ]
   }
  ],
