--- a/docs/pivot_long_wide.ipynb
+++ b/docs/pivot_long_wide.ipynb
@@ -13,8 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd \n",
-    "import janitor as jn "
+    "import janitor as jn\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -23,18 +23,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = [{'name': 'Alice', 'variable': 'wk1', 'value': 5},\n",
-    " {'name': 'Alice', 'variable': 'wk2', 'value': 9},\n",
-    " {'name': 'Alice', 'variable': 'wk3', 'value': 20},\n",
-    " {'name': 'Alice', 'variable': 'wk4', 'value': 22},\n",
-    " {'name': 'Bob', 'variable': 'wk1', 'value': 7},\n",
-    " {'name': 'Bob', 'variable': 'wk2', 'value': 11},\n",
-    " {'name': 'Bob', 'variable': 'wk3', 'value': 17},\n",
-    " {'name': 'Bob', 'variable': 'wk4', 'value': 33},\n",
-    " {'name': 'Carla', 'variable': 'wk1', 'value': 6},\n",
-    " {'name': 'Carla', 'variable': 'wk2', 'value': 13},\n",
-    " {'name': 'Carla', 'variable': 'wk3', 'value': 39},\n",
-    " {'name': 'Carla', 'variable': 'wk4', 'value': 40}]\n",
+    "df = [\n",
+    "    {\"name\": \"Alice\", \"variable\": \"wk1\", \"value\": 5},\n",
+    "    {\"name\": \"Alice\", \"variable\": \"wk2\", \"value\": 9},\n",
+    "    {\"name\": \"Alice\", \"variable\": \"wk3\", \"value\": 20},\n",
+    "    {\"name\": \"Alice\", \"variable\": \"wk4\", \"value\": 22},\n",
+    "    {\"name\": \"Bob\", \"variable\": \"wk1\", \"value\": 7},\n",
+    "    {\"name\": \"Bob\", \"variable\": \"wk2\", \"value\": 11},\n",
+    "    {\"name\": \"Bob\", \"variable\": \"wk3\", \"value\": 17},\n",
+    "    {\"name\": \"Bob\", \"variable\": \"wk4\", \"value\": 33},\n",
+    "    {\"name\": \"Carla\", \"variable\": \"wk1\", \"value\": 6},\n",
+    "    {\"name\": \"Carla\", \"variable\": \"wk2\", \"value\": 13},\n",
+    "    {\"name\": \"Carla\", \"variable\": \"wk3\", \"value\": 39},\n",
+    "    {\"name\": \"Carla\", \"variable\": \"wk4\", \"value\": 40},\n",
+    "]\n",
     "\n",
     "\n",
     "df = pd.DataFrame(df)\n",
@@ -55,11 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.pivot_wider(\n",
-    "        index = \"name\",\n",
-    "        names_from = \"variable\",\n",
-    "        values_from = \"value\"\n",
-    "    )"
+    "df.pivot_wider(index=\"name\", names_from=\"variable\", values_from=\"value\")"
    ]
   },
   {
@@ -75,9 +73,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = [{'name': 1, 'n': 10.0, 'pct': 0.1},\n",
-    " {'name': 2, 'n': 20.0, 'pct': 0.2},\n",
-    " {'name': 3, 'n': 30.0, 'pct': 0.3}]\n",
+    "df = [\n",
+    "    {\"name\": 1, \"n\": 10.0, \"pct\": 0.1},\n",
+    "    {\"name\": 2, \"n\": 20.0, \"pct\": 0.2},\n",
+    "    {\"name\": 3, \"n\": 30.0, \"pct\": 0.3},\n",
+    "]\n",
     "\n",
     "\n",
     "df = pd.DataFrame(df)\n",
@@ -91,13 +91,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(df.assign(num = 0)\n",
-    "   .pivot_wider(\n",
-    "      index = \"num\",\n",
-    "      names_from = \"name\",\n",
-    "      values_from = [\"n\", \"pct\"],\n",
-    "      names_sep = \"_\"\n",
-    "      )\n",
+    "(\n",
+    "    df.assign(num=0).pivot_wider(\n",
+    "        index=\"num\", names_from=\"name\", values_from=[\"n\", \"pct\"], names_sep=\"_\"\n",
+    "    )\n",
     ")"
    ]
   },
@@ -115,10 +112,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = [{'dep': 5.5, 'step': 1, 'a': 20, 'b': 30},\n",
-    " {'dep': 5.5, 'step': 2, 'a': 25, 'b': 37},\n",
-    " {'dep': 6.1, 'step': 1, 'a': 22, 'b': 19},\n",
-    " {'dep': 6.1, 'step': 2, 'a': 18, 'b': 29}]\n",
+    "df = [\n",
+    "    {\"dep\": 5.5, \"step\": 1, \"a\": 20, \"b\": 30},\n",
+    "    {\"dep\": 5.5, \"step\": 2, \"a\": 25, \"b\": 37},\n",
+    "    {\"dep\": 6.1, \"step\": 1, \"a\": 22, \"b\": 19},\n",
+    "    {\"dep\": 6.1, \"step\": 2, \"a\": 18, \"b\": 29},\n",
+    "]\n",
     "\n",
     "\n",
     "df = pd.DataFrame(df)\n",
@@ -132,11 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.pivot_wider(\n",
-    "    index = \"dep\",\n",
-    "    names_from  = 'step',\n",
-    "    flatten_levels = False\n",
-    "    )"
+    "df.pivot_wider(index=\"dep\", names_from=\"step\", flatten_levels=False)"
    ]
   },
   {
@@ -153,11 +148,8 @@
    "outputs": [],
    "source": [
     "df.pivot_wider(\n",
-    "    index = \"dep\",\n",
-    "    names_from  = 'step',\n",
-    "    flatten_levels = False,\n",
-    "    levels_order = ['step', None]\n",
-    "    )"
+    "    index=\"dep\", names_from=\"step\", flatten_levels=False, levels_order=[\"step\", None]\n",
+    ")"
    ]
   },
   {
@@ -167,10 +159,10 @@
    "outputs": [],
    "source": [
     "df.pivot_wider(\n",
-    "    index = \"dep\",\n",
-    "    names_from = 'step',\n",
-    "    flatten_levels = True,\n",
-    "    )"
+    "    index=\"dep\",\n",
+    "    names_from=\"step\",\n",
+    "    flatten_levels=True,\n",
+    ")"
    ]
   },
   {
@@ -180,11 +172,8 @@
    "outputs": [],
    "source": [
     "df.pivot_wider(\n",
-    "    index = \"dep\",\n",
-    "    names_from = 'step',\n",
-    "    flatten_levels= True,\n",
-    "    levels_order = ['step', None]\n",
-    "    )"
+    "    index=\"dep\", names_from=\"step\", flatten_levels=True, levels_order=[\"step\", None]\n",
+    ")"
    ]
   },
   {
@@ -201,7 +190,7 @@
    "outputs": [],
    "source": [
     "# default value of names_sep is '_'\n",
-    "df.pivot_wider(index = \"dep\", names_from = \"step\")"
+    "df.pivot_wider(index=\"dep\", names_from=\"step\")"
    ]
   },
   {
@@ -210,10 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.pivot_wider(\n",
-    "    index = \"dep\",\n",
-    "    names_from = \"step\",\n",
-    "    names_sep = \"\")\n"
+    "df.pivot_wider(index=\"dep\", names_from=\"step\", names_sep=\"\")"
    ]
   },
   {
@@ -230,12 +216,7 @@
    "outputs": [],
    "source": [
     "# replicate `names_sep`\n",
-    "df.pivot_wider(\n",
-    "    index = \"dep\",\n",
-    "    names_from = \"step\",\n",
-    "    names_sep = None,\n",
-    "    names_glue = \"_\".join\n",
-    "    )"
+    "df.pivot_wider(index=\"dep\", names_from=\"step\", names_sep=None, names_glue=\"_\".join)"
    ]
   },
   {
@@ -246,11 +227,11 @@
    "source": [
     "# going beyond names_sep\n",
     "df.pivot_wider(\n",
-    "    index = \"dep\",\n",
-    "    names_from = \"step\",\n",
-    "    names_sep = None,\n",
-    "    names_glue = lambda col: f\"{col[0]}_step{col[1]}\"\n",
-    "    )"
+    "    index=\"dep\",\n",
+    "    names_from=\"step\",\n",
+    "    names_sep=None,\n",
+    "    names_glue=lambda col: f\"{col[0]}_step{col[1]}\",\n",
+    ")"
    ]
   },
   {
@@ -266,10 +247,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = [{'Salesman': 'Knut', 'Height': 6, 'product': 'bat', 'price': 5},\n",
-    " {'Salesman': 'Knut', 'Height': 6, 'product': 'ball', 'price': 1},\n",
-    " {'Salesman': 'Knut', 'Height': 6, 'product': 'wand', 'price': 3},\n",
-    " {'Salesman': 'Steve', 'Height': 5, 'product': 'pen', 'price': 2}]\n",
+    "df = [\n",
+    "    {\"Salesman\": \"Knut\", \"Height\": 6, \"product\": \"bat\", \"price\": 5},\n",
+    "    {\"Salesman\": \"Knut\", \"Height\": 6, \"product\": \"ball\", \"price\": 1},\n",
+    "    {\"Salesman\": \"Knut\", \"Height\": 6, \"product\": \"wand\", \"price\": 3},\n",
+    "    {\"Salesman\": \"Steve\", \"Height\": 5, \"product\": \"pen\", \"price\": 2},\n",
+    "]\n",
     "\n",
     "df = pd.DataFrame(df)\n",
     "\n",
@@ -282,11 +265,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = df.groupby(['Salesman', 'Height']).cumcount().add(1)\n",
+    "idx = df.groupby([\"Salesman\", \"Height\"]).cumcount().add(1)\n",
     "\n",
-    "(df.assign(idx = idx)\n",
-    "   .pivot_wider(index = ['Salesman', 'Height'], names_from = 'idx')\n",
-    ")"
+    "(df.assign(idx=idx).pivot_wider(index=[\"Salesman\", \"Height\"], names_from=\"idx\"))"
    ]
   },
   {
@@ -302,15 +283,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(df.assign(idx = idx)\n",
-    "   .pivot_wider(index = ['Salesman', 'Height'], \n",
-    "                names_from = 'idx',\n",
-    "                flatten_levels = False)\n",
-    "   .sort_index(level='idx', \n",
-    "               axis = 'columns', \n",
-    "               sort_remaining=False)\n",
-    "   .collapse_levels()\n",
-    "   .reset_index()\n",
+    "(\n",
+    "    df.assign(idx=idx)\n",
+    "    .pivot_wider(index=[\"Salesman\", \"Height\"], names_from=\"idx\", flatten_levels=False)\n",
+    "    .sort_index(level=\"idx\", axis=\"columns\", sort_remaining=False)\n",
+    "    .collapse_levels()\n",
+    "    .reset_index()\n",
     ")"
    ]
   },
@@ -321,19 +299,19 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame(\n",
-    "        {\n",
-    "            \"geoid\": [1, 1, 13, 13],\n",
-    "            \"name\": [\"Alabama\", \"Alabama\", \"Georgia\", \"Georgia\"],\n",
-    "            \"variable\": [\n",
-    "                \"pop_renter\",\n",
-    "                \"median_rent\",\n",
-    "                \"pop_renter\",\n",
-    "                \"median_rent\",\n",
-    "            ],\n",
-    "            \"estimate\": [1434765, 747, 3592422, 927],\n",
-    "            \"error\": [16736, 3, 33385, 3],\n",
-    "        }\n",
-    "    )\n",
+    "    {\n",
+    "        \"geoid\": [1, 1, 13, 13],\n",
+    "        \"name\": [\"Alabama\", \"Alabama\", \"Georgia\", \"Georgia\"],\n",
+    "        \"variable\": [\n",
+    "            \"pop_renter\",\n",
+    "            \"median_rent\",\n",
+    "            \"pop_renter\",\n",
+    "            \"median_rent\",\n",
+    "        ],\n",
+    "        \"estimate\": [1434765, 747, 3592422, 927],\n",
+    "        \"error\": [16736, 3, 33385, 3],\n",
+    "    }\n",
+    ")\n",
     "\n",
     "df"
    ]
@@ -345,11 +323,11 @@
    "outputs": [],
    "source": [
     "df.pivot_wider(\n",
-    "        index=[\"geoid\", \"name\"],\n",
-    "        names_from=\"variable\",\n",
-    "        values_from=[\"estimate\", \"error\"],\n",
-    "        levels_order=[\"variable\", None],\n",
-    "    )"
+    "    index=[\"geoid\", \"name\"],\n",
+    "    names_from=\"variable\",\n",
+    "    values_from=[\"estimate\", \"error\"],\n",
+    "    levels_order=[\"variable\", None],\n",
+    ")"
    ]
   },
   {
@@ -365,12 +343,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(df.encode_categorical(variable = (None, \"appearance\"))\n",
-    "   .pivot_wider(index = [\"geoid\", \"name\"],\n",
-    "                names_from = \"variable\",\n",
-    "                values_from = [\"estimate\", \"error\"],\n",
-    "                levels_order = [\"variable\", None])\n",
-    "    )"
+    "(\n",
+    "    df.encode_categorical(variable=(None, \"appearance\")).pivot_wider(\n",
+    "        index=[\"geoid\", \"name\"],\n",
+    "        names_from=\"variable\",\n",
+    "        values_from=[\"estimate\", \"error\"],\n",
+    "        levels_order=[\"variable\", None],\n",
+    "    )\n",
+    ")"
    ]
   }
  ],
