--- a/docs/sort_naturally.ipynb
+++ b/docs/sort_naturally.ipynb
@@ -13,9 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas_flavor as pf\n",
+    "import janitor\n",
     "import pandas as pd\n",
-    "import janitor"
+    "import pandas_flavor as pf"
    ]
   },
   {
