--- a/docs/case_when.ipynb
+++ b/docs/case_when.ipynb
@@ -14,7 +14,10 @@
    "outputs": [],
    "source": [
     "import janitor\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from janitor.functions import case_when\n",
+    "\n",
+    "janitor.__version__"
    ]
   },
   {
@@ -265,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
